# TN_HOTRG

./: CLAUDE.md  README.md  pyproject.toml
src/tn_hotrg/: __init__.py  hotrg_cytnx.py  initial_tensors.py  model.py
tests/: test_initial_tensors.py
